// Copyright (c) 2020-2021, Aviatrix Systems, Inc.

syntax = "proto3";

package twamp;

option go_package = "github.com/kuhuAvtx/twamp/proto";

import "google/api/annotations.proto";
import "google/protobuf/struct.proto";

service TwampMetricsService {
  // Main service for Traffic latency metrics service
  rpc GetMetrics (TwampMetricsRequest) returns (stream TwampMetricsReply) {
  };
}

message TwampMetricsRequest {
  string name = 1;
}

message TwampMetricsReply {
  double Latency = 3;
}